WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253227
[JSC] x64 CCall returnValueGPR is not in m_validGPRs
https://bugs.webkit.org/show_bug.cgi?id=253227
Summary
[JSC] x64 CCall returnValueGPR is not in m_validGPRs
Yusuke Suzuki
Reported
2023-03-01 22:58:36 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-01 22:59:02 PST
<
rdar://problem/106127760
>
Yusuke Suzuki
Comment 2
2023-03-01 23:05:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10924
EWS
Comment 3
2023-03-01 23:59:55 PST
Committed
261048@main
(adae6f119127): <
https://commits.webkit.org/261048@main
> Reviewed commits have been landed. Closing PR #10924 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug